@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-13T16:10:51Z",
+  "timestamp" : "2022-05-14T08:09:44Z",
   "count_outdated" : 1050,
   "uniques_outdated" : 67,
-  "count" : 1525,
-  "uniques" : 81,
+  "count" : 1528,
+  "uniques" : 82,
   "views" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
