@@ -1,5 +1,5 @@
 {
-  "count": 475,
+  "count": 478,
   "uniques": 3,
   "views": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-14T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
