@@ -1,3 +1,10 @@
+2022-05-14T08:09:44Z:
+* notice: last 14d: all unq: 478 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1525 81
+* notice: next accum: outdated-all outdated-unq / all unq: 1050 67 / 1528 82
+* notice: prev json diff / prev day diff: unq all: +1 +3 -0 -0 / +1 +3 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-13T16:10:51Z:
 * notice: last 14d: all unq: 475 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1523 80
